# DA-Scaleserve-ChatBot

./: .gitignore  README.md
nextjs/: package-lock.json  package.json
nextjs/.next/: trace
nextjs/.next/cache/: .rscinfo
nextjs/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
nextjs/.next/server/app/: page.js  page_client-reference-manifest.js
nextjs/.next/server/vendor-chunks/: @swc.js  @ungap.js  bail.js  character-entities.js  comma-separated-tokens.js  debug.js  decode-named-character-reference.js  dequal.js  devlop.js  estree-util-is-identifier-name.js  extend.js  has-flag.js  hast-util-to-jsx-runtime.js  hast-util-whitespace.js  html-url-attributes.js  inline-style-parser.js  is-plain-obj.js  mdast-util-from-markdown.js  mdast-util-to-hast.js  mdast-util-to-string.js  micromark-core-commonmark.js  micromark-factory-destination.js  micromark-factory-label.js  micromark-factory-space.js  micromark-factory-title.js  micromark-factory-whitespace.js  micromark-util-character.js  micromark-util-chunked.js  micromark-util-classify-character.js  micromark-util-combine-extensions.js  (+29 more)
nextjs/src/: types.d.ts
nextjs/src/app/: layout.tsx  page.tsx
nextjs/src/components/: ChatBotWindow.tsx  ChatHistorySideBar.tsx  ChatInput.tsx  ChatMessageBubble.tsx  ModelRoutingView.tsx
server/: alembic.ini  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 335b9c30faef_initial_schema.py
server/db/: database.py  models.py
server/routes/: router.py
server/schemas/: chat.py
(+145 files in other folders)
